SET(WORLD_SOURCES
    Artifact.cpp
    CargoHook.cpp
    DefenceGenerator.cpp
    DesertPlanet.cpp
    Droid.cpp
    Engine.cpp
    Equipment.cpp
    Goods.cpp
    HabitablePlanet.cpp
    Hull.cpp
    InteractionContext.cpp
    Item.cpp
    LandContext.cpp
    Meteor.cpp
    Micromodulus.cpp
    Planet.cpp
    Radar.cpp
    Scanner.cpp
    Ship.cpp
    ShipContext.cpp
    SolarSystem.cpp
    SpaceBase.cpp
    SpaceObject.cpp
    SystemObject.cpp
    Tank.cpp
    Types.cpp
    Weapon.cpp
    WorldHelper.cpp
    WorldObject.cpp
    GameInterface.cpp
    WorldManager.cpp
    SystemWidget.cpp
)

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${FREETYPE_INCLUDE_DIRS}
    ${ICONV_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${LUA_INCLUDE_DIR}
    ${JSONCPP_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${LUABIND_INCLUDE_DIR}
    ${SDLMIXER_INCLUDE_DIR}
    ${CMAKE_SOURCE_DIR}/include/
    ${CMAKE_BINARY_DIR}/include/OpenSR/
    ${CMAKE_SOURCE_DIR}/libRanger
)

ADD_LIBRARY(world SHARED ${WORLD_SOURCES})
TARGET_LINK_LIBRARIES(world engine)
