FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(CMAKE_AUTOMOC ON)

SET(QP_SOURCES
    main.cpp
    PlayerWindow.cpp
    QuestPlayer.cpp
)

SET(QP_UI
    PlayerWindow.ui
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_SOURCE_DIR}/include
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Core_INCLUDE_DIRS}
)

SET(QP_COMPILE_FLAGS "${Qt5Core_EXECUTABLE_COMPILE_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")

QT5_WRAP_UI(QP_UI_SOURCES ${QP_UI})

ADD_EXECUTABLE(opensr-questplayer ${QP_SOURCES} ${QP_UI_SOURCES})

SET_TARGET_PROPERTIES(opensr-questplayer PROPERTIES COMPILE_FLAGS ${QP_COMPILE_FLAGS})
TARGET_LINK_LIBRARIES(opensr-questplayer qm Qt5::Core Qt5::Widgets)

INSTALL(TARGETS opensr-questplayer RUNTIME DESTINATION bin)