FIND_PACKAGE(Qt4 REQUIRED) 

INCLUDE(${QT_USE_FILE})

SET(RW_HEADERS
    MainWindow.h
)

SET(RW_SOURCES
    main.cpp
    MainWindow.cpp
)

SET(RW_UI
    MainWindow.ui
)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
)

QT4_WRAP_CPP(RW_MOC_SOURCES ${RW_HEADERS})
QT4_WRAP_UI(RW_UI_SOURCES ${RW_UI})

ADD_EXECUTABLE(resourceviewer ${RW_SOURCES} ${RW_UI_SOURCES} ${RW_MOC_SOURCES} ${RW_HEADERS})
TARGET_LINK_LIBRARIES(resourceviewer ranger ${QT_LIBRARIES})