SET(WORLD_HEADERS
    Artifact.h
    Asteroid.h
    CargoHook.h
    DefenceGenerator.h
    DesertPlanet.h
    Droid.h
    Engine.h
    Equipment.h
    Goods.h
    HabitablePlanet.h
    Hull.h
    InfoWidget.h
    InteractionContext.h
    InteractionWidget.h
    Item.h
    LandContext.h
    Micromodulus.h
    Planet.h
    PlanetManager.h
    PlanetarySystem.h
    RaceManager.h
    Radar.h
    Scanner.h
    Ship.h
    ShipContext.h
    SkinManager.h
    SpaceBase.h
    SpaceObject.h
    SpaceObjectWidget.h
    StyleManager.h
    SystemManager.h
    SystemObject.h
    SystemPlanetWidget.h
    SystemWidget.h
    Tank.h
    Types.h
    Weapon.h
    WorldGenHook.h
    WorldHelper.h
    WorldManager.h
    WorldObject.h
    QuestPlayer.h
    world-global.h
)

INSTALL(FILES ${WORLD_HEADERS} DESTINATION include/OpenSR/World)

ADD_SUBDIRECTORY(python)
